fix(Candytar): Central block alignment to be consistent with other components

--- a/src/components/candytar/Candytar.css
+++ b/src/components/candytar/Candytar.css
@@ -1,5 +1,7 @@
 .ax-candytar {
   display: block;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .ax-candytar--tiny-clanger {
